Logs/12-12-12_01-10-49.txt
2012-12-12 01:10:49.332000: ENGINE starting
2012-12-12 01:10:49.332000: ENGINE loading STUDENT ENGINE part 1
2012-12-12 01:10:49.332000: ERROR: invalid syntax (__init__.py, line 136)
2012-12-12 01:10:49.332000: TRACE:
Traceback (most recent call last):
  File "C:\Users\Adam\Desktop\a\Quoridor_Client_2121\Releases\1.0.3\Python 3.2\Engine\controller.py", line 56, in __init__
  File "C:\Python32\lib\importlib\__init__.py", line 124, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 821, in _gcd_import
    loader.load_module(name)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 436, in load_module
    return self._load_module(fullname)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 141, in decorated
    return fxn(self, module, *args, **kwargs)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 330, in _load_module
    code_object = self.get_code(name)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 413, in get_code
    dont_inherit=True)
  File "C:\Users\Joe\Google Drive\CS2\Quoridor\StudentEngines\jak3122\__init__.py", line 136
    elif n = neighbors[2]:  # right neighbor
           ^
SyntaxError: invalid syntax

